Remove CHECK in zucchini_commands that always evaluates to true.

Bug: 751215
Change-Id: I5c7e2978528b690fa41f2ca8483b3a98ff264609
Reviewed-on: https://chromium-review.googlesource.com/596907
Reviewed-by: Samuel Huang <huangs@chromium.org>
Commit-Queue: Etienne Pierre-Doray <etiennep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491122}
Former-commit-id: 5181009502bc37d6e731ac348a7ea304289587a7